--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-APP_NAME=/st/
+APP_NAME=ST
 APP_ENV=production
-APP_KEY=base64:coaFrT/8U9vQFgl8qRum1hdWVqr3pMrTf5MoezN3aCE=
+APP_KEY=
 APP_DEBUG=false
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=https://localhost
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -51,11 +51,11 @@ REDIS_PORT=6379
 
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
-MAIL_PORT=587
-MAIL_USERNAME=example@gmail.com
-MAIL_PASSWORD=examplepass
-MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS="no-reply@example.com"
+MAIL_PORT=2525
+MAIL_USERNAME=null
+MAIL_PASSWORD=null
+MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
